# practice_webapp_on_rust_with_rocket

./: .env  .gitignore  Cargo.toml  README.md  table.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: about.html.tera  base.html.tera  form.html.tera
templates/error/: 404.html.tera
