[package]
name = "webapp"
version = "0.1.0"
authors = ["madosuki <yurikasamaaikatsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "tera_templates"]